--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
    <!--imgch, imgu-->
    <img class="imgu" style="max-height: 300px;max-width: 300px ;padding-left: 10px ;display: none">
               </div>
-            <div class="upload" onclick"uploadim()">
+            <div class="upload" onclick = "uploadim()">
                 <button id="upload" class="uploadbtn">
                    <p>Upload</p>
                    <span id="spanS" class="material-symbols-outlined">
