--- a/index.html
+++ b/index.html
@@ -289,12 +289,13 @@
         </div>
         <!--made-->
         <div class="made-s">
+
           <!--home-->
           <div id="home">
             <div class="containerq rrt">
             <div class="nasher nnu1">
               <div class="input" style="display: flex;flex-direction: column">
- <textarea id="narInp" class="narinpc" style = "hegh:600px; width: 600px">
+ <textarea id="narInp" class="narinpc" style = "heght:600px; width: 600px">
       </textarea>
       <button onclick = "chn(1)" class="material-symbols-outlined chimgbtn">photo_camera</button>
               </div>
@@ -311,7 +312,7 @@
 
                   <div class="nasher nnu2">
               <div class="input"style="display: flex;flex-direction: column">
- <textarea id="narInpm" class="narinpc" style = "hegh:600px; width: 600px">
+ <textarea id="narInpm" class="narinpc" style = "heght:600px; width: 600px">
  </textarea>
    <input type="file" id="imgch" style="display: none">
    <label for="imgch" class="imgchl">chose image</label>
