--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
           
          <div class="profiledivp">
         <div class="containerq rrtuy">
+          <button onclick="getToken()" id="getToken">get token</button>
           <div id="postsPro"></div>
         </div>
       </div>
