--- a/test.html
+++ b/test.html
@@ -5,26 +5,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
+    <style>
+      .actions-btns {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 20px auto;
+        gap: 10px;
+        /* gap لإضافة مسافة بين الأزرار */
+      }
+  
+      .actions-btns button {
+        color: #f0f0f0;
+        background: #222;
+        padding: 10px 15px;
+        border: none;
+        font-size: 15px;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        width: 30%;
+        font-size:100%;
+        justify-content: center;
+        /* توزيع العناصر داخل الزر بشكل مركزي */
+        transition: background 0.3s ease;
+        /* انتقال سلس لتغيير لون الخلفية عند التمرير */
+      }
+  
+      .actions-btns button:hover {
+        background: #2977F6;
+      }
+  </style>
 </head>
 
-<body>
-
-  <style>.cimgpd {
-  width: 39px;
-  height: 39px;
-  border-radius: 50%;
-  border: 1px solid #fff; /* تحسين ترتيب الخواص */
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  }
-  
-  .cimgpd img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  }</style>
+<body onclick="">
 </body>
-
+<div class="actions-btns">
+                        <button class="delete-btn" style="background: ${colorDelete}" 
+                                onclick="deletePost('${posts[i].id}', '${deletePassword}')">
+                          <p>delete</p> 
+                          <span id="spanS" class="material-symbols-outlined">delete</span>
+                        </button>
+            <button class="com-btn" onclick="com(${i})" style="background: #222">
+              <p id="lnn">${comentsLength}</p>
+              <span id="spanSs" class="material-symbols-outlined spanS">comment</span>
+            </button>
+            <button onclick="likee(${i})" class="like-btn">
+              <p id="lnn">${posts[i].likes}</p>
+              <span id="spanSs" class="material-symbols-outlined spanS">thumb_up</span>
+            </button>
+        </div>
+        <div class="pro-ccd" style="width: 40px;height: 4px">
+          <img loading="lazy" class="pro-cc" src="${storedComents[i].proUrl}" >
+        </div>
 </html>
