--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
       <div class="sin">
         <div class="chimg">
           <label for="profileImageInput" class="material-symbols-outlined lbprofileImageSin">photo_camera</label>
-          <input onclick="getImgProfile()" type="file" id="profileImageInput" style="display: none;">
+          <input onchange="getImgProfile()" type="file" id="profileImageInput" style="display: none;">
           <div class="box-img-sin">
             <img>
           </div>
