--- a/users.html
+++ b/users.html
@@ -18,26 +18,17 @@
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
-
+<script>
+  
+</script>
 </head>
 
 <body>
  <div class="load-screan-Api" id="lA">
    <span class="loader2"></span>
   </div>
-  <div class="users">
-    <div class="user">
-      <div class="box-img">
-        <img src="pro1.jpg" alt="">
-      </div>
-      <span>name</span>
-      <span>phone</span>
-      <span>user id</span>
-      <span>password</span>
-      <button id="true" class="material-symbols-outlined">check</button>
-      <button id="delete" class="material-symbols-outlined">delete</button>
-    </div>
-  </div>
+  <div class="users"></div>
+  <div class="not-adime">أنت مش أدمن داخل تعمل أيه🤨🤨</div>
   <script src="uscrpit.js"></script>
 </body>
 
